--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </a>
       </div>
       <footer>
-        Projeto educativo feito pela
-        <a href="https://www.rocketseat.com.br" target="_blank">Rocketseat</a>
+        Projeto educativo feito pelo
+        <a href="https://www.instagram.com/joaovictor.xyz" target="_blank">J Victor</a>
       </footer>
     </div>
     <script
