--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="conteiner">
       <div id="profile">
-        <img src="/assets/avatar.png" alt="Foto de perfil" />
+        <img src="assets/avatar.png" alt="Foto de perfil" />
         <p style="text-align: center">Usuário</p>
       </div>
       <div id="switch" onclick="toggleMode()">
