Adição de links aos "botões centrais" e mudança do nome de um

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <span></span>
       </div>
       <ul>
-        <li><a href="#">Descubra a Sanrio!</a></li>
+        <li><a href="https://sanrio.com.br/">Descubra a Sanrio!</a></li>
 
-        <li><a href="#">Qual é o seu personagem?</a></li>
+        <li><a href="https://pt.quizur.com/quiz/qual-personagem-da-sanrio-voce-seria-1nHUu">Qual é o seu personagem?</a></li>
 
-        <li><a href="#">Desafios Sanrio</a></li>
+        <li><a href="https://www.daiso.com.br/categoria/sanrio">Loja Sanrio</a></li>
       </ul>
       <div id="social-links">
         <a href="https://chatgpt.com/" target="_blank">
