Mudanças dos icones

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <li><a href="https://www.daiso.com.br/categoria/sanrio">Loja Sanrio</a></li>
       </ul>
       <div id="social-links">
-        <a href="https://chatgpt.com/" target="_blank">
-          <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+        <a href="https://www.numuki.com/games/hello-kitty/" target="_blank">
+       <ion-icon name="game-controller-outline"></ion-icon>
         </a>
         <a
-          href="https://www.google.com/intl/pt-BR/gmail/about/"
+          href="https://br.linkedin.com/company/sanrio-do-brasil"
           target="_blank"
         >
-          <ion-icon name="mail-outline"></ion-icon>
+          <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="https://support.google.com" target="_blank">
-          <ion-icon name="notifications-outline"></ion-icon>
+        <a href="https://www.instagram.com/Sanrio/" target="_blank">
+         <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.google.com.br/maps" target="_blank">
+        <a href="https://maps.app.goo.gl/G2oL9TUzbViCoxds9" target="_blank">
           <ion-icon name="location-outline"></ion-icon>
         </a>
       </div>
