Adição de target="_blank"

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <span></span>
       </div>
       <ul>
-        <li><a href="https://sanrio.com.br/">Descubra a Sanrio!</a></li>
+        <li><a href="https://sanrio.com.br/" target="_blank">Descubra a Sanrio!</a></li>
 
-        <li><a href="https://pt.quizur.com/quiz/qual-personagem-da-sanrio-voce-seria-1nHUu">Qual é o seu personagem?</a></li>
+        <li><a href="https://pt.quizur.com/quiz/qual-personagem-da-sanrio-voce-seria-1nHUu" target="_blank">Qual é o seu personagem?</a></li>
 
-        <li><a href="https://www.daiso.com.br/categoria/sanrio">Loja Sanrio</a></li>
+        <li><a href="https://www.daiso.com.br/categoria/sanrio" target="_blank">Loja Sanrio</a></li>
       </ul>
       <div id="social-links">
         <a href="https://www.numuki.com/games/hello-kitty/" target="_blank">
